19-kubernetes-volume/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
