19-kubernetes-volume/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
    ingressClassName: nginx
    rules:
      - host: localhost
        http:
          paths:
            - backend:
                service:
                  name: nginx-service
                  port:
                    number: 80
              path: /
              pathType: Prefix
